force-app/main/default/objects/AcctPlanCollectionExport__c/AcctPlanCollectionExport__c.object-meta.xml
<CustomObject>
    <label>Account Plan Collection Export</label>
    <nameField>
        <displayFormat>CE-{000000}</displayFormat>
        <label>Account Plan Collection Export Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Collection Export</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>