force-app/main/default/objects/AcctPlanCollectionExport__c/fields/AcctPlanCollectionMethodExport__c.field-meta.xml
<CustomField>
    <fullName>AcctPlanCollectionMethodExport__c</fullName>
    <description>Account Plan Collection Method Export</description>
    <label>Account Plan Wallet</label>
    <referenceTo>AcctPlanWallet__c</referenceTo>
    <relationshipLabel>Account Plan Collection Export</relationshipLabel>
    <relationshipName>Account_Plan_Collection_Export</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>