force-app/main/default/objects/AcctPlanCollectionExport__c/fields/FeeCharge__c.field-meta.xml
<CustomField>
    <fullName>FeeCharge__c</fullName>
    <description>ค่าธรรมเนียมมาตรฐาน (แก้ไขโดย RM)</description>
    <inlineHelpText>ค่าธรรมเนียมมาตรฐาน (แก้ไขโดย RM)</inlineHelpText>
    <label>Fee charge (adjusted by RM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>