force-app/main/default/objects/AcctPlanCollectionExport__c/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <description>Collection pattern คือค่าที่ต้องการทราบว่าความถี่ในการได้รับเงินจากต่างประเทศนั้นได้รับเมื่อไหร่ เพื่อสามารถนำไปวางแผนเกี่ยวกับการดึง transaction มาจาก bank อื่น รวมทั้งอาจนำไปใช้วางแผนกลยุทธ์สำหรับการป้องกันความเสี่ยงด้านอัตราแลกเปลี่ยนด้วย</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Collection pattern คือค่าที่ต้องการทราบว่าความถี่ในการได้รับเงินจากต่างประเทศนั้นได้รับเมื่อไหร่ เพื่อสามารถนำไปวางแผนเกี่ยวกับการดึง transaction มาจาก bank อื่น รวมทั้งอาจนำไปใช้วางแผนกลยุทธ์สำหรับการป้องกันความเสี่ยงด้านอัตราแลกเปลี่ยนด้วย</inlineHelpText>
    <label>Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>