force-app/main/default/objects/AcctPlanCollectionExport__c/fields/TermDays__c.field-meta.xml
<CustomField>
    <fullName>TermDays__c</fullName>
    <description>Term (Days)</description>
    <inlineHelpText>Term (Days)</inlineHelpText>
    <label>Term (Days)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>