force-app/main/default/objects/AcctPlanCollectionExport__c/fields/Volumn__c.field-meta.xml
<CustomField>
    <fullName>Volumn__c</fullName>
    <description>Export (Vol.) Average per Month</description>
    <inlineHelpText>Export (Vol.) Average per Month</inlineHelpText>
    <label>Export (Vol.) Average per Month</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>