force-app/main/default/objects/AcctPlanCollectionExport__c/fields/WalletCashFee__c.field-meta.xml
<CustomField>
    <fullName>WalletCashFee__c</fullName>
    <description>Wallet ของ Trade Fee ในส่วนที่เกี่ยวข้องกับธุรกรรมการรับเงินจากในประเทศ</description>
    <inlineHelpText>Wallet ของ Trade Fee ในส่วนที่เกี่ยวข้องกับธุรกรรมการรับเงินจากในประเทศ</inlineHelpText>
    <label>Wallet Trade fee (Yearly)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>